deploy: adc110c30615e17605c28704430023991660df13

--- a/src/fortran_rs/variables.rs.html
+++ b/src/fortran_rs/variables.rs.html
@@ -248,8 +248,8 @@
         program.get_name().to_string(),
         lines,
         variables,
-        program.get_args().clone(),
-        program.get_filename().to_string(),
+        <span class="comment">// program.get_args().clone(),
+        </span>program.get_filename().to_string(),
     );
 }
 
