deploy: 9c97cc28728731a6ef1512c9a4110d89ae5cac28

--- a/src/fortran_rs/helpers/errors.rs.html
+++ b/src/fortran_rs/helpers/errors.rs.html
@@ -98,7 +98,7 @@
         Error::UnknownToken =&gt; <span class="string">&quot;UnknownToken&quot;</span>,
         Error::UnexpectedToken =&gt; <span class="string">&quot;UnexpectedToken&quot;</span>,
         Error::Critical =&gt; <span class="string">&quot;Critical&quot;</span>,
-        Error::TooCharactersOnLine =&gt; <span class="string">&quot;TooCharacters&quot;</span>,
+        Error::TooCharactersOnLine =&gt; <span class="string">&quot;TooCharactersOnLine&quot;</span>,
     }
 }
 
