deploy: c4c0ba22da38d203ff70c632a3c6a8d46d0d2e1a

--- a/src/fortran_rs/utils/print.rs.html
+++ b/src/fortran_rs/utils/print.rs.html
@@ -59,7 +59,7 @@
                         .get_key_value(line.get(index).unwrap().get_value().as_str())
                         .unwrap()
                         .<span class="number">1
-                        </span>.get_value()
+                        </span>.get_value_string()
                         .as_str(),
                 );
             }
