--- a/src/fortran_rs/parser.rs.html
+++ b/src/fortran_rs/parser.rs.html
@@ -109,7 +109,7 @@
 <a href="#109" id="109">109</a>
 <a href="#110" id="110">110</a>
 <a href="#111" id="111">111</a>
-</pre></div><pre class="rust"><code><span class="doccomment">//! # Parser module
+</pre></div><pre class="rust"><code><span class="doccomment">//! Parser for the Fortran language
 //!
 //! This module is in charge of parsing the file.
 //! It&#39;s the first step of the interpreter.
